--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
-version: '3.9'
-
+version: '3.8'
 services:
   db:
     image: postgres:15
-    container_name: forevermatch_db
+    container_name: forever-match-db
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: pass
-      POSTGRES_DB: forevermatch
+      POSTGRES_PASSWORD: yourpassword
+      POSTGRES_DB: forever_match
     ports:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-    restart: always
-
 volumes:
   db_data:
